--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -125,6 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"Výška">
 <!ENTITY Ctr_altoptionsi	"V simulaci nastavení už není dialogové okno, ale 'okno prohlížeče' s lištami je skryto. Volba 'Použít stávající stránku' přidávající URL stránek, otevřených v současném okně, je dostupná přes 'about:preferences'. Tlačítko 'Možnosti' je nahrazeno novým, aby bylo možné otevírat možnosti v okně.">
 <!ENTITY Ctr_options_rem	"Pamatovat poslední zvolenou kategorii">
+<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
 <!ENTITY Ctr_svgfilters		"SVG barvy pro defaultní ikony tlačítek lišty">
 <!ENTITY Ctr_wincontrols	"Přesunutelné ovládací prvky okna v režimu celé obrazovky">
 <!ENTITY Ctr_puibuttonsep	"Oddělovač tlačítka menu">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Tlačítko menu záložek">
 <!ENTITY Ctr_hiderecentbm	"Záložky (bublina): skrýt posledně přidané záložky">
 <!ENTITY Ctr_hideeditbm		"Hvězdička záložek: skrýt bublinu (pokud stránka není v záložkách)">
+<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panel menu vzhledu">
 <!ENTITY Ctr_bmbunsortbm	"Popup: 'Netříděné záložky' v submenu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu nad záložkami">
