--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -125,6 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"Højde">
 <!ENTITY Ctr_altoptionsi	"Det simulerede indstillinger-vindue er ikke længere en dialog men et 'browservindue' med alle værktøjslinjer skjult. Funktionen 'Anvend nuværende side' tilføjer kun url'er fra sider som er åbne i det nuværende vindue, hvilket i dette tilfælde kun er 'about:preferences'. Værktøjslinjeknappen 'indstillinger' erstattes af en ny en for at kunne åbne indstillinger i et vindue.">
 <!ENTITY Ctr_options_rem	"Husk senest valgte kategori">
+<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
 <!ENTITY Ctr_svgfilters		"SVG-farver til standard værktøjslinje knap ikoner">
 <!ENTITY Ctr_wincontrols	"Flytbar fuldskærmsvindue kontrolelementer">
 <!ENTITY Ctr_puibuttonsep	"Menuknapseparator">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Bogmærker-menuknap">
 <!ENTITY Ctr_hiderecentbm	"Bogmærkers popup: skjul senest tilførte bogmærker">
 <!ENTITY Ctr_hideeditbm		"Bogmærkers stjerne: skjul popup (hvis side ikke er bogmærket)">
+<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panelmenu udseende">
 <!ENTITY Ctr_bmbunsortbm	"Popup: 'Usorterede bogmærker'-undermenu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu over bogmærker">
