--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -125,6 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"Höhe:">
 <!ENTITY Ctr_altoptionsi	"Das simulierte Einstellungsfenster ist kein Dialogfenster mehr, sondern ein leistenloses normales Fenster. Die Leistenschaltfläche 'Einstellungen' wird durch 'Einstellungen (Fenster)' ersetzt. Diese Schaltfläche muss einmalig im Modus 'Anpassen' zur Menüleiste hinzugefügt werden.">
 <!ENTITY Ctr_options_rem	"Zuletzt besuchte Kategorie speichern">
+<!ENTITY Ctr_aboutpages		"Allgemeine 'about:'-Seiten: alternative Darstellung">
 <!ENTITY Ctr_svgfilters		"SVG-Farben für Symbole von 'Standard-Schaltflächen'">
 <!ENTITY Ctr_wincontrols	"Verschiebbare Fenster-Schaltflächen im Vollbildmodus">
 <!ENTITY Ctr_puibuttonsep	"Menüschaltfläche">
@@ -133,7 +134,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Trennlinie rechts">
 <!ENTITY Ctr_html5warning	"HTML5-Vollbildwarnung">
 <!ENTITY Ctr_oldtoplevimg	"Klassische 'Bilddarstellung' auf weißem Hintergrund">
-<!ENTITY Ctr_altalertbox	"'Benachrichtigungs-Box': alternative Darstellung">
+<!ENTITY Ctr_altalertbox	"Benachrichtigungs-Box: alternative Darstellung">
 <!ENTITY Ctr_emptygfavico	"Allgemeines Lesezeichensymbol ersetzen">
 <!ENTITY Ctr_mstatusbar		"Statusbereich: sichtbar und verschiebbar">
 <!ENTITY Ctr_mstatusbars4e	"Statusbereich wird von 'Status-4-Evar' kontrolliert">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Lesezeichen-Menüschaltfläche">
 <!ENTITY Ctr_hiderecentbm	"Lesezeichen-Pop-up: zuletzt hinzugefügte Lesezeichen verstecken">
 <!ENTITY Ctr_hideeditbm		"Lesezeichen-Stern: Pop-up verstecken (wenn Seite noch kein Lesezeichen ist)">
+<!ENTITY Ctr_oldplacesbut	"Leisten-Lesezeichen: Alte Darstellung">
 <!ENTITY Ctr_bmbutpanelm	"Aufklappmenü: 'Panel'-Darstellung">
 <!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Weitere Lesezeichen'-Menü anzeigen">
 <!ENTITY Ctr_bmbunsortbm2	"Menü über den Lesezeichen">
