--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -125,6 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"Wusokosć">
 <!ENTITY Ctr_altoptionsi	"Simulěrowane wokno nastajenjow wěcej njejo dialog, ale 'wobglědowakowe wokno', źož wšykne symbolowe rědki su schowane. Funkcija 'Aktualny bok wužywaś' pśidawa jano URL bokow, kótarež wócynjaju se w aktualnem woknje, kótarež jo w toś tom paźe 'about:preferences'. 'Tłocašk symboloweje rědki Nastajenja' wuměnja se pśez nowy, aby se nastajenja we woknje wócynili.">
 <!ENTITY Ctr_options_rem	"Kategoriju se spomnjeś, kótaraž jo se ako slědna wubrała">
+<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
 <!ENTITY Ctr_svgfilters		"SVG-barwy za symbole tłocaškow symbolowych rědkow">
 <!ENTITY Ctr_wincontrols	"Pśesuwajobne wóźeńske elementy połneje wobrazowki">
 <!ENTITY Ctr_puibuttonsep	"Źěleńska smužka menijowego tłocaška">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Tłocašk menija cytańskich znamjenjow">
 <!ENTITY Ctr_hiderecentbm	"Wuskokujuce wokno cytańskich znamjenjow: Njedawno pśidany cytańske znamjenja schowaś">
 <!ENTITY Ctr_hideeditbm		"Gwězdku cytańskich znamjenjow: Wuskokujuce wokno schowaś (jolic bok njejo ako cytańske znamje skłaźony)">
+<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: Naglěd menijowego wuskokujucego wokna">
 <!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: Meni 'Njesortěrowane cytańske znamjenja'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad cytańskimi znamjenjami">
