--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -125,8 +125,9 @@
 <!ENTITY Ctr_altoptionswh	"Height:">
 <!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options toolbar button' gets replaced by a new one to be able to open options in a window.">
 <!ENTITY Ctr_options_rem	"Remember last selected category">
+<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
 <!ENTITY Ctr_svgfilters		"SVG colors for default toolbar button icons">
-<!ENTITY Ctr_wincontrols	"Movable full screen window controls">
+<!ENTITY Ctr_wincontrols	"Movable window controls for full screen mode">
 <!ENTITY Ctr_puibuttonsep	"Menu button separator">
 <!ENTITY Ctr_puibut_no_sep	"Hidden">
 <!ENTITY Ctr_puibut_l_sep	"Left">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Bookmarks menu button">
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
+<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panel menu appearance">
 <!ENTITY Ctr_bmbunsortbm	"Popup: 'Other Bookmarks' menu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
