--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -125,6 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"Kõrgus">
 <!ENTITY Ctr_altoptionsi	"Simuleeritud sätete aken ei ole enam dialoogiaken, vaid peidetud tööriistaribadega 'brauseri aken'. Säte 'Kasuta aktiivset veebilehte' lisab avalehtede hulka ainult aktiivses aknas avatud lehtede aadressid, mis on antud juhul ainult 'about:preferences'. Sätete nupp tööriistaribal asendatakse uuega, et sätteid saaks aknas avada.">
 <!ENTITY Ctr_options_rem	"Jäta meelde viimati valitud kategooria">
+<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
 <!ENTITY Ctr_svgfilters		"Kasuta vaikimisi tööriistariba nuppude jaoks SVG-värve">
 <!ENTITY Ctr_wincontrols	"Liigutatavad akna juhtelemendid täisekraani režiimis">
 <!ENTITY Ctr_puibuttonsep	"Menüünupu eraldaja">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Järjehoidjate menüü nupp">
 <!ENTITY Ctr_hiderecentbm	"Järjehoidjate hüpik: peida viimati lisatud järjehoidjad">
 <!ENTITY Ctr_hideeditbm		"Järjehoidjate täht: peida hüpik (kui leht pole järjehoidjates)">
+<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Menüühüpik: paneelimenüü välimus">
 <!ENTITY Ctr_bmbunsortbm	"Menüühüpik: alammenüü 'Muud järjehoidjad'">
 <!ENTITY Ctr_bmbunsortbm2	"Menüü järjehoidjate kohal">
