--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -125,6 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"高さ:">
 <!ENTITY Ctr_altoptionsi	"オプションウィンドウは、すべてのツールバーが隠されたブラウザウィンドウであり、ダイアログではありません。このウィンドウを開いて「現在のページを使用」機能を使用すると、オプションウィンドウの URL(about:preferences) が追加されます。オプションツールバーボタンは、オプションウィンドウを開けるように新しいものに置き換えられます。">
 <!ENTITY Ctr_options_rem	"最後に開いたカテゴリを記憶する">
+<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
 <!ENTITY Ctr_svgfilters		"デフォルトのツールバーボタンのアイコンを SVG カラーにする">
 <!ENTITY Ctr_wincontrols	"フルスクリーン用ウィンドウ制御ボタンを移動可能にする">
 <!ENTITY Ctr_puibuttonsep	"メニューボタンパネルのセパレーター">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"ブックマークメニューボタン">
 <!ENTITY Ctr_hiderecentbm	"ブックマークポップアップ: 「最近ブックマークしたページ」を隠す">
 <!ENTITY Ctr_hideeditbm		"ブックマークスター: ポップアップを隠す (ページがブックマークされていない場合)">
+<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"ポップアップ: パネルメニューで表示する">
 <!ENTITY Ctr_bmbunsortbm	"ポップアップ: 未整理のブックマークをメニューとして表示">
 <!ENTITY Ctr_bmbunsortbm2	"メニュー上部に表示">
@@ -275,7 +277,7 @@
 <!ENTITY Ctr_autocompl_sep	"結果を境界線で区切る">
 <!ENTITY Ctr_urlbar_uc		"検索候補機能を統合しない">
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
-<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
+<!ENTITY Ctr_cresultshcb	"リストの高さを制限する: ">
 <!ENTITY Ctr_lbsugres		"候補の表示数">
 <!ENTITY Ctr_lbsbradius		"ロケーションバーと検索バーの枠線の角の丸みを設定する">
 
@@ -374,8 +376,8 @@
 <!ENTITY Ctr_fx50findbarhl	"この設定をオフにすると、検索バーのハイライト機能を無効にします。">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
 <!ENTITY Ctr_fx50flyweb		"この設定をオフにすると、FlyWeb を無効にします。">
-<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
+<!ENTITY Ctr_e_oneoffsearch	"自動補完候補リストの検索エンジン">
+<!ENTITY Ctr_fx51OOSeach	"この設定をオフにすると、ロケーションバーの自動補完候補リストに検索エンジンを表示しません。">
 
 
 <!ENTITY Ctr_pw_settings	"設定">
