--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -125,6 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"Высота">
 <!ENTITY Ctr_altoptionsi	"Окно настроек больше не является диалогом, теперь это «Окно браузера», в котором скрыты все панели инструментов. Опция «Использовать текущие страницы» добавляет только URL-адреса открытые в текущем окне, в данном случае 'about:preferences'. Кнопка «Настройки» на панели инструментов заменяется на новую, чтобы позволить открывать параметры в окне.">
 <!ENTITY Ctr_options_rem	"Запоминать последнюю выбранную категорию">
+<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
 <!ENTITY Ctr_svgfilters		"SVG цвета для стандартных значков панели инструментов">
 <!ENTITY Ctr_wincontrols	"Подвижное управление полноэкранным режимом">
 <!ENTITY Ctr_puibuttonsep	"Разделитель кнопки меню">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Кнопка меню закладок">
 <!ENTITY Ctr_hiderecentbm	"Всплывающее меню: скрыть недавно добавленные закладки">
 <!ENTITY Ctr_hideeditbm		"Звездочка закладок: скрыть всплывающее окно (если страница не в закладках)">
+<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Всплывающее меню: вид панели меню">
 <!ENTITY Ctr_bmbunsortbm	"Всплывающее меню: подменю «Неподшитые закладки»">
 <!ENTITY Ctr_bmbunsortbm2	"Меню над закладками">
