--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -125,6 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"高度">
 <!ENTITY Ctr_altoptionsi	"模拟的选项窗口再也不是一个对话框，而是一个隐藏所有工具栏的“浏览器窗口”。“使用当前页面”功能仅添加在已在当前窗口打开的页面地址，在这种情况下只是“about:preferences”选项。 “选项”工具栏图标被替换为新的，以便于在窗口中打开选项。">
 <!ENTITY Ctr_options_rem	"记住最后选中的分类">
+<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
 <!ENTITY Ctr_svgfilters		"默认工具栏图标使用的SVG颜色">
 <!ENTITY Ctr_wincontrols	"全屏窗口控制按钮可以移动">
 <!ENTITY Ctr_puibuttonsep	"菜单按钮分隔符">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"书签菜单按钮">
 <!ENTITY Ctr_hiderecentbm	"书签弹出菜单: 隐藏最近添加的书签">
 <!ENTITY Ctr_hideeditbm		"书签星星图标: 隐藏弹出菜单(如果页面未添加到书签)">
+<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"弹出式菜单: 面板式菜单外观">
 <!ENTITY Ctr_bmbunsortbm	"弹出式菜单: “未分类书签”子菜单">
 <!ENTITY Ctr_bmbunsortbm2	"菜单在书签之上">
