--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -125,6 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"高度">
 <!ENTITY Ctr_altoptionsi	"本套件模擬選項視窗將會是一個隱藏所有工具列的「瀏覽器視窗」。 若你在 [選項視窗]/[一般]/[首頁] 的設定頁內按下「使用目前頁面」按鈕，會將首頁網址設定變更為「about:preferences」，而非主瀏覽視窗的所有分頁。本套件會新增一個工具列按鈕，名為「選項(視窗)」，若你是第一次開啟本設定的話，可以在介面自訂模式中找到該按鈕。">
 <!ENTITY Ctr_options_rem	"記住上次選擇的選項分頁">
+<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
 <!ENTITY Ctr_svgfilters		"改變預設工具列按鈕圖示顏色">
 <!ENTITY Ctr_wincontrols	"可移動的全螢幕視窗控制項">
 <!ENTITY Ctr_puibuttonsep	"Menu button separator">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"書籤選單按鈕">
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
+<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"彈出式書籤選單: 書籤選單使用和面板選單同風格的外觀">
 <!ENTITY Ctr_bmbunsortbm	"彈出式書籤選單: 「未排序書籤」項目附加子選單">
 <!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
