--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -125,6 +125,7 @@
 <!ENTITY Ctr_altoptionswh	"Višina">
 <!ENTITY Ctr_altoptionsi	"Simulirano okno možnosti ni več pogovorno okno, ampak 'okno brskalnika' s skritimi orodnimi vrsticami. Značilnost 'Uporabi trenutno stran' samo doda v trenutnem oknu odprte URL-je strani, ki je v tem primeru samo 'about:preferences'. Gumb orodne vrstice 'možnosti' se nadomesti z novim, da se lahko možnosti odprejo v oknu.">
 <!ENTITY Ctr_options_rem	"Zapomni si nazadnje izbrano kategorijo">
+<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
 <!ENTITY Ctr_svgfilters		"Barve SVG za privzete ikone gumbov orodne vrstice">
 <!ENTITY Ctr_wincontrols	"Premakljive nadzorne tipke celozaslonskega okna">
 <!ENTITY Ctr_puibuttonsep	"Ločilo menijskega gumba">
@@ -186,6 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Gumb menija zaznamkov">
 <!ENTITY Ctr_hiderecentbm	"Pojavno okno zaznamkov: skrij nedavno dodane zaznamke">
 <!ENTITY Ctr_hideeditbm		"Zvezdica za zaznamke: skrij pojavno okno (če stran ni dodana med zaznamke)">
+<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Pojavna okna: videz ploščastega menija">
 <!ENTITY Ctr_bmbunsortbm	"Pojavna okna: podmeni 'Nerazvrščeni zaznamki'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zaznamki">
